k8s/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: k8s-learning-project-frontend
        ports:
        - containerPort: 80
----


apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app.kubernetes.io/name: frontend // Reroutes the traffic to the frontend pods
  ports:
    - protocol: TCP
      port: 8080 // This is the port of the Service
      targetPort: 80 // This is the port of the Pods
