k8s/database.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  labels:
    app: database
spec:
  replicas: 1  # StatefulSet ensures that the database is always running
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - name: postgres
        image: postgres:16-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: database  # Backend connects to this name
spec:
  type: ClusterIP  # Only accessible inside the cluster
  selector:
    app: database
  ports:
  - protocol: TCP
    port: 5432       # Service port
    targetPort: 5432 # Container port
